[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokentally"
dynamic = ["version"]
description = "Track AI API usage with TokenTally"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "TokenTally", email = "support@tokentally.io" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/tokentally/tokentally-python"
Repository = "https://github.com/tokentally/tokentally-python"

[tool.setuptools.dynamic]
version = {attr = "tokentally._version.__version__"}

[tool.setuptools.packages.find]
include = ["tokentally*"]
